# UnimozerNext

./: .gitignore  DEVELOPMENT.md  ECLIPSE.md  LICENSE  README.md  SPEC.md  THIRD_PARTY_NOTICES.md  components.json  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.cjs  tauri-updater.key.pub  tsconfig.json  vite.config.ts  vitest.config.ts
.github/: dependabot.yml
.github/workflows/: linux-deb-release-build.yml  linux-release-build.yml  macos-release-build.yml  test.yml  windows-manual-build.yml  windows-release-build.yml
docs/: school-jshell-delay.md  testing.md  updater.md
e2e/: app-launch.spec.ts  settings.spec.ts  welcome.spec.ts
e2e/fixtures/: tauriMock.ts
examples/: README.md
examples/array-display-project/: README.md
examples/code-highlighting-project/: HIGHLIGHT_TEST.md  README.md
examples/infinite-loop-stop-project/: README.md
examples/jshell-smoke-project/: README.md  SMOKE_TEST.md
examples/reload-disk-project/: README.md
examples/structogram-stress-project/: README.md
java-parser/: README.md  build.gradle  settings.gradle
jshell-bridge/: README.md  build.gradle  settings.gradle
public/fonts/: README.md
scripts/: check-version-consistency.mjs  generate-logo-runtime-assets.mjs  jshell-trace-summary.mjs  select-jdk.js  sync-monaco-themes.cjs  sync-version.js
src/: App.tsx  AppContainer.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json  tauri.linux-deb.conf.json  tauri.linux-release.conf.json  tauri.linux.conf.json  tauri.macos.arm64.conf.json  tauri.macos.x64.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/linux/deb/: postrm
src-tauri/linux/mime/: com.unimozer.next.xml
src-tauri/permissions/: app-commands.toml
src-tauri/src/: app_bootstrap.rs  app_settings.rs  command_error.rs  command_registry.rs  compile_run.rs  crash_log_io.rs  external_links.rs  fs_io.rs  java_tools.rs  jshell_io.rs  launch_io.rs  lifecycle.rs  main.rs  parser_io.rs  project_archive.rs  project_io.rs  settings_io.rs  shared_types.rs  startup_diagnostics.rs  updater_io.rs  workspace_session.rs
src-tauri/src/ls/: jdtls.rs  jsonrpc.rs  mod.rs  uri.rs
src-tauri/windows/: hooks.nsh
src-tauri/windows/fragments/: installer-marker.wxs  umz-association.wxs
(+198 files in other folders)
