[package]
name = "unimozer-next"
version = "0.8.0"
description = "Unimozer Next"
authors = ["You"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
base64 = "0.22.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2.5.3", features = [] }
tauri-plugin-clipboard-manager = "2"
tauri-plugin-dialog = "2.3.2"

[features]
custom-protocol = ["tauri/custom-protocol"]

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-window-state = "2"
