[package]
name = "unimozer-next"
version = "0.10.11-alpha.1"
description = "Unimozer Next"
authors = ["Laurent Haan"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.5.5", features = [] }

[dependencies]
base64 = "0.22.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2.10.2", features = [] }
tauri-plugin-clipboard-manager = "2.3.2"
tauri-plugin-dialog = "2.6.0"
tauri-plugin-updater = "2.9.0"
zip = "2.2.2"

[features]
custom-protocol = ["tauri/custom-protocol"]

[target.'cfg(windows)'.dependencies]
winreg = "0.55.0"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-window-state = "2.4.1"
