[package]
name = "unimozer-next"
version = "0.14.3"
description = "Unimozer Next"
authors = ["Laurent Haan"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.5.5", features = [] }

[dependencies]
base64 = "0.22.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2.10.3", features = [] }
tauri-plugin-clipboard-manager = "2.3.2"
tauri-plugin-dialog = "2.6.0"
tauri-plugin-updater = "2.10.1"
dunce = "1.0.5"
url = "2.5.7"
walkdir = "2.5.0"
zip = "2.2.2"
libc = "0.2.185"

[features]
custom-protocol = ["tauri/custom-protocol"]

[target.'cfg(windows)'.dependencies]
winreg = "0.55.0"
windows-sys = { version = "0.61.2", features = ["Win32_Foundation", "Win32_NetworkManagement_WNet", "Win32_System_Threading"] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-window-state = "2.4.1"
